--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^19.0.0",
     "react-window": "^1.8.11",
     "sass": "^1.89.0",
-    "universal-cookie": "^8.0.1"
+    "universal-cookie": "^8.0.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
