--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-window": "^1.8.11",
     "sass": "^1.89.0",
     "universal-cookie": "^8.0.1",
+    "xlsx": "^0.18.5",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
