fix: useInfiniteQuery for handling infinite scroll

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-icons/all-files": "^4.1.0",
+    "@tanstack/react-query": "^5.77.2",
     "axios": "^1.9.0",
     "lodash.debounce": "^4.0.8",
     "next": "15.3.2",
